<resources>
    <string name="app_name">MobileFinalProject</string>
    <string name="saved_date" ></string>
    <string name="background_image">background image</string>
    <string name="next_event">Next Event</string>
    <string name="view_calendar">View Calendar</string>
    <string name="new_entry">New Entry</string>
    <string name="all_events">All Events</string>
    <string name="select_date">Select Date</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="event_title">Event Title</string>
    <string name="event_details">Event details</string>
    <string name="add_new_event">Add New Event</string>
</resources>