<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewEvent">

    <ImageView
        android:id="@+id/BG_Image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:scaleType="center"
        app:srcCompat="@drawable/blue_1634110_1280"
        tools:srcCompat="@drawable/blue_1634110_1280" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="5"
        android:rowCount="8">

        <ImageView
            android:id="@+id/weather"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowSpan="1"
            android:layout_rowWeight="0.5"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_columnWeight="6"
            android:scaleType="fitXY"
           />

        <ImageView
            android:id="@+id/profile"
            android:onClick="logout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowSpan="1"
            android:layout_rowWeight="0.5"
            android:layout_column="4"
            android:layout_columnSpan="1"
            android:layout_columnWeight="6"
            android:padding="30dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/logout" />

        <Button
            android:id="@+id/btnDate"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:layout_rowWeight="0.1"
            android:layout_column="1"
            android:layout_columnSpan="3"
            android:layout_columnWeight="5"
            android:onClick="showDate"
            android:text="@string/pick_date"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnTime"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_row="2"
            android:layout_rowSpan="1"
            android:layout_rowWeight="0.1"
            android:layout_column="1"
            android:layout_columnSpan="3"
            android:layout_columnWeight="1"
            android:text="@string/pick_time"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/newEventTitle"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_row="3"
            android:layout_rowSpan="1"
            android:layout_rowWeight="0.1"
            android:layout_column="0"
            android:layout_columnSpan="5"
            android:layout_columnWeight="5"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/white"
            android:hint="@string/event_title"
            android:paddingTop="15dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/newEventText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_rowSpan="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnSpan="5"
            android:layout_columnWeight="1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/white"
            android:hint="@string/event_details"
            android:paddingTop="15dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnAddEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_rowSpan="1"
            android:layout_rowWeight="0.1"
            android:layout_column="1"
            android:layout_columnSpan="3"
            android:layout_columnWeight="1"
            android:text="@string/add_new_event"
            android:textColor="@color/white" />


    </GridLayout>

</RelativeLayout>